# shallenge

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  common.cuh  main.cu  preprocessor.cu
